about and home alignment fix

--- a/src/Website/assets/styles/main.css
+++ b/src/Website/assets/styles/main.css
@@ -8,7 +8,7 @@ img { max-height: 100%; max-width: 100%; }
 
 .navbar-brand { margin-top: -10px; height: 70px; margin-bottom: -10px; width: 174px; padding: 0px; }
 
-.navbar-default { border-radius: 0px; padding-top: 20px; padding-bottom: 20px; padding-right: 2%; padding-left: 2%; }
+.navbar-default { border-radius: 0px; padding-top: 20px; padding-bottom: 20px; padding-right: 2%; padding-left: 0; }
 
 .header-button-a { padding: 0px; }
 
@@ -32,7 +32,7 @@ img { max-height: 100%; max-width: 100%; }
 
 .section1 { width: 95%; margin: 0 auto; padding-top: 30px; padding-bottom: 30px; }
 
-.section1-text { padding-left: 3%; padding-right: 3%; }
+.section1-text { padding-left: 0%; padding-right: 3%; }
 
 .buttons-section1 { margin-top: 60px; }
 
